--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "ChannelGrabber\\Converter\\": "src/ChannelGrabber/Converter/"
+            "ChannelGrabber\\Converter\\": "src/ChannelGrabber/Converter/",
+            "App\\Command\\": "src/ChannelGrabber/Command/"
         }
     },
     "autoload-dev": {
