--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "php": ">=7.1",
-        "symfony/console": "^4.0"
+        "symfony/console": "^4.0",
+        "symfony/serializer": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
